# sage-dev

./: .gitignore  AGENTS.md  AGENTS_AND_RULES.md  CLAUDE.md  CONTRIBUTING.md  README.md  install-sage-commands.sh  pyproject.toml  sage-setup.sh  sage-skillify.sh
.claude/: config.toml  settings.json
.github/workflows/: build-skills.yml
.sage/: EXECUTION_RULES.md  README.md  config.json  enforcement.json.template
.sage/agent/: README.md
.sage/lib/: commit-queue.sh  parallel-scheduler.sh  resolve-dependencies.sh  stream-functions.sh  validate-dependencies.sh
.sage/search/: README.md  (+1 more)
agents/: LANGUAGES.md  bs-check.md  bs-enforce.md  index.json
commands/: EXAMPLES.md  INSTALLATION.md  README.md  SAGE.COMMANDS.md  SAGE.EXAMPLES.md  SAGE.INSTALLATION.md  SAGE.TESTING.md  SAGE.VALIDATION_FRAMEWORK.md  SAGE.VALIDATORS.md  SAGE.WORKFLOW_GUIDE.md  SAGE_DEV_COMMANDS.md  SAGE_DEV_WORKFLOW.md  TESTING.md  TICKET_TYPES.md  VALIDATION_FRAMEWORK.md  VALIDATORS.md  WORKFLOW.md  WORKFLOW_GUIDE.md  blueprint.md  breakdown.md  commit.md  devflow.md  enforce.md  enhance.md  estimate.md  gap-analysis.md  implement.md  intel.md  migrate.md  plan.md  poc.md  progress.md  quality.md  repair.md  rollback.md  sage.blueprint.md  sage.breakdown.md  sage.commit.md  sage.compact-context.md  sage.context.md  (+35 more)
docs/: AI_SKILLS_GUIDE.md  INSTALLATION.md  MCP_SETUP.md  MIGRATION_REPORT.md  QUICKSTART.md  SKILLS_GUIDE.md  WORKFLOWS.md
rules/: commit-standards.md  enforcement-guide.md  git-commit-standards.md  security-standards.md  test-standards.md  typing-standards.md
skills/: README.md
(+172 files in other folders)
