[project]
name = "sage-dev"
version = "2.2.0"
description = "Interactive CLI setup tool for AI coding agents with language-specific enforcement"
readme = "README.md"
authors = [
    { name = "Mathews-Tom", email = "tommathews2007@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "rich>=14.1.0",
    "typer[all]>=0.19.2",
]

[project.scripts]
sage-setup = "sage_dev.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
